--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -38,11 +38,12 @@
     <%= @turno.estado %>
 </p>
 
-<%= button_to "Volver", turnos_index_path,:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
 <% if @turno.user_id == current_user.id %>
-    <%= link_to 'Editar', turnos_edit_path(:id => @turno.id), :id => "boton_volver",class: "button is-primary is-inverted is-rounded is-outlined"%>
+    <%= button_to "Volver",  users_show_path(id: current_user.id), :id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
+    <%= link_to 'Editar', turnos_edit_path(:id => @turno.id), :id => "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
     <%= button_to "Eliminar", turnos_delete_path(:id => @turno.id), :id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :delete%>
 <% else %>
+    <%= button_to "Volver", turnos_index_path,:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
     <%= link_to 'Solicitar', requests_new_path(:id => @turno.id),id: "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
     <% if @turno.estado == 'COMPLETADO'%>
         <%= link_to 'Agregar reseña ', resenas_new_path(:id_viaje => @turno.id), class: "button is-primary is-inverted is-rounded is-outlined"%>
