--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -27,13 +27,13 @@
 <div class="row">
     
     <div class="column-cuenta">
-    <div align='center' style="display: flex; flex-flow: wrap; ">
-    <h3 class = "title is-4 has-text-dark" >Turnos Publicados Activos</h3>
+        <div align='left' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Turnos Publicados Activos</h3>
+        </div>
     </div>
-    <br/>
-    <div align='center' style="display: flex; flex-flow: wrap;">
-        <% @no_vacio = false %>
-        <div class="row">
+
+    <% @no_vacio = false %>
+    <div class="row">
         <% @turnos.each do |turno|%>
             <%if turno.user_id == current_user.id and turno.estado == "ACTIVO"%>
                 <% @no_vacio = true %>
@@ -48,28 +48,53 @@
             <% end %>
         <% end %>
         <% if not @no_vacio %>
-            <br/>
             <div align='center' style="display: flex; flex-flow: wrap; ">
-            <h4 class = "title is-4 has-text-dark" >No existen turnos activos publicados</h4>
+                <h4 class = "title is-4 has-text-dark" >No existen turnos activos publicados</h4>
             </div>
         <% end %>
     </div>
+
+    <div class="column-cuenta">
+        <div align='center' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Turnos Publicados Confirmados</h3>
+        </div>
+    </div>
+
+    <% @no_vacio = false %>
+    <div class="row">
+    <% @turnos.each do |turno|%>
+        <%if turno.user_id == current_user.id and turno.estado == "CONFIRMADO"%>
+            <div class="column-turno">
+                <% @no_vacio = true %>
+                <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
+                <b>Hora salida </b><p><%= turno.hora_salida%></p>
+                <b>Día de la semana </b><p><%= turno.dia_semana%></p>
+                <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
+                <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
+                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+            </div>
+        <% end %>
+    <% end %>
+    <% if not @no_vacio %>
+        <div align='center' style="display: flex; flex-flow: wrap; ">
+            <h4 class = "title is-4 has-text-dark" >No tiene turnos confirmados</h4>
+        </div>
+    <% end %>
     </div>
 
     <div class="column-cuenta">
-    <br/>
-    <br/>
-    <div align='center' style="display: flex; flex-flow: wrap; ">
-    <h3 class = "title is-4 has-text-dark" >Turnos Publicados Confirmados</h3>
+        <div align='center' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Turnos Publicados Completados</h3>
+        </div>
     </div>
-    <br/>
-    <div align='center' style="display: flex; flex-flow: wrap; ">
-        <% @no_vacio = false %>
-        <div class="row">
+    
+    
+    <% @no_vacio = false %>
+    <div class="row">
         <% @turnos.each do |turno|%>
-            <%if turno.user_id == current_user.id and turno.estado == "CONFIRMADO"%>
+            <%if turno.user_id == current_user.id and turno.estado == "COMPLETADO"%>
+                <% @no_vacio = true %>
                 <div class="column-turno">
-                    <% @no_vacio = true %>
                     <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
                     <b>Hora salida </b><p><%= turno.hora_salida%></p>
                     <b>Día de la semana </b><p><%= turno.dia_semana%></p>
@@ -80,45 +105,11 @@
             <% end %>
         <% end %>
         <% if not @no_vacio %>
-            <br/>
+            
             <div align='center' style="display: flex; flex-flow: wrap; ">
-            <h4 class = "title is-4 has-text-dark" >No tiene turnos confirmados</h4>
+                <h4 class = "title is-4 has-text-dark" >No tiene turnos completados</h4>
             </div>
         <% end %>
-    </div>
-    </div>
-    </div>
-
-    <div class="column-cuenta">
-    <br/>
-    <br/>
-    <div align='center' style="display: flex; flex-flow: wrap; ">
-    <h3 class = "title is-4 has-text-dark" >Turnos Publicados Completados</h3>
-    </div>
-    <br/>
-    <div align='center' style="display: flex; flex-flow: wrap; ">
-    <% @no_vacio = false %>
-    <div class="row">
-        <% @turnos.each do |turno|%>
-            <%if turno.user_id == current_user.id and turno.estado == "COMPLETADO"%>
-                <% @no_vacio = true %>
-                <div class="column-turno">
-                <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
-                <b>Hora salida </b><p><%= turno.hora_salida%></p>
-                <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-                <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
-                <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
-                </div>
-            <% end %>
-        <% end %>
-        <% if not @no_vacio %>
-            <br/>
-            <div align='center' style="display: flex; flex-flow: wrap; ">
-            <h4 class = "title is-4 has-text-dark" >No tiene turnos completados</h4>
-            </div>
-        <% end %>
-    </div>
     </div>
 </div>
-<br/>
+
